Fix: Repair overflow in laptops

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -266,8 +266,8 @@ button#reset:hover {
  }
 
  @media (min-width:1440px) { 
-  #game-messages {
-    height: 15em;
+  html, body {
+    overflow: hidden;
   }
 
   #footer{
